--- a/index_2.html
+++ b/index_2.html
@@ -52,7 +52,7 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p1 class="msg">올해는 꼭 모두 지키자!</p1>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">새로운회사</div>
+        <div class="bucket img1-t2 center done">새로운회사</div>
         <div class="bucket img2 center">계리사자격증</div>
         <div class="bucket img2 center">영어회화능력</div>
         <div class="bucket img1-t4 center">파이썬코딩능력</div>
